added: list startup by uuid
