# docs/swagger.yaml
@@ -739,38 +739,30 @@ paths:
       tags:
       - startups
     get:
-      description: Retrieves a single startup by its ID
+      description: Retrieves startups by user's UUID
       parameters:
-      - description: Startup ID
+      - description: user UUID
         in: path
-        name: id
+        name: uuid
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: Startup retrieved successfully
+          description: Startups retrieved successfully
           schema:
             allOf:
             - $ref: '#/definitions/response.APIResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/startups.Startup'
+                  $ref: '#/definitions/startups.StartupList'
               type: object
-        "400":
-          description: Invalid startup ID
-          schema:
-            $ref: '#/definitions/response.APIResponse'
-        "404":
-          description: Startup not found
-          schema:
-            $ref: '#/definitions/response.APIResponse'
         "500":
           description: Internal server error
           schema:
             $ref: '#/definitions/response.APIResponse'
-      summary: Get startup by ID
+      summary: Get startups by UUID
       tags:
       - startups
     put:
